ultimas alterações - salvando inscrição
ultimas alterações - salvando inscrição

--- a/WebContent/confirmacao.xhtml
+++ b/WebContent/confirmacao.xhtml
@@ -9,27 +9,35 @@
 </h:head>
 <h:body bgcolor="red">
 	<div align="center">
-		<p:panel style="width:500px; height:400px">
-			
+		<p:panel style="width:500px; height:400px" id="print">
+
 			<div align="left">
 				<h:panelGrid columns="3" cellpadding="5">
-				<img
-				src="#{facesContext.externalContext.request.contextPath}/img/logosemana.png"
-				height="80px" width="160px" />
-				<p:outputLabel value="      "/>
-				
-				<img
-				src="#{facesContext.externalContext.request.contextPath}/img/logoifma.png"
-				height="80px" width="190px" />
+					<img
+						src="#{facesContext.externalContext.request.contextPath}/img/logosemana.png"
+						height="80px" width="160px" />
+					<p:outputLabel value="      " />
+
+					<img
+						src="#{facesContext.externalContext.request.contextPath}/img/logoifma.png"
+						height="80px" width="190px" />
 				</h:panelGrid>
-				
+
 				<h:panelGrid columns="1" cellpadding="5">
 					<p:outputLabel value="Participante: #{InicioBean.alunologado.nome}" />
-					<p:outputLabel value="Minicurso: Aquaponia na prática" />
+					<p:outputLabel
+						value="Minicurso: #{InicioBean.alunologado.minicurso.tema}" />
 				</h:panelGrid>
 			</div>
-			<p:barcode value="1lkj21kk21lk2" type="qr" width="200px"/>
+			<p:barcode value="#{InicioBean.alunologado.qrcode}" type="qr"
+				width="200px" />
 		</p:panel>
+	</div>
+	<div align="center">
+		<p:commandButton value="Imprimir confirmação de inscrição" type="button" icon="ui-icon-print"
+			style="display:block;margin-bottom: 20px; margin-top:30px">
+			<p:printer target="print" />
+		</p:commandButton>
 	</div>
 </h:body>
 </html>
