--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -7,19 +7,19 @@
 <h:head>
 	<title>Login</title>
 </h:head>
-<h:body bgcolor="red">
+<h:body>
 
-	<div style="background-color: #FFFFFF">
-		<h:panelGrid columns="3" cellpadding="5">
+	<div class="ui-fluid">
+		<h:panelGrid columns="3" columnClasses="ui-grid-col-2,ui-grid-col-10" layout="grid" styleClass="ui-panelgrid-blank">
 
 			<img
 				src="#{facesContext.externalContext.request.contextPath}/img/Logo.gif"
-				height="230px" width="1100px" />
+				height="200px" width="900px" />
 			<p:outputLabel value="      " />
 
 			<img
 				src="#{facesContext.externalContext.request.contextPath}/img/logoifma.png"
-				height="200px" width="620px" />
+				height="110px" width="420"/>
 		</h:panelGrid>
 	</div>
 	<p:growl id="messages" />
