images e alteracao no login
images e alteracao no login

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -33,7 +33,7 @@
 
 				<h:panelGrid columns="2" cellpadding="5">
 
-					<h:outputLabel value="Matrícula:" />
+					<h:outputLabel value="CPF:" />
 					<p:inputText value="#{alunoBean.alunoBusca.matricula}" />
 
 					<h:outputLabel value="Senha:" />
